# StudentInfoManager

./: CMakeLists.txt  dependencies.h  main.c
DataAccess/: dataAccess.h  dataBaseOperation.c
Logic/: student.c  student.h  studentList.c
View/: userInterface.c  userInterface.h
